2009-11-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (ParseSubImageSpecification): Try to match
	behavior of previous sub-image specification parser.  Some
	incantations did not produce the same results.

	* win2k/IMDisplay/res/{IMDisplay.ico, IMDisplayDoc.ico}: Replaced
	with GraphicsMagick icon prepared by Jaroslav Fojtik.

	* coders/svg.c (ReadSVGImage): Use runtime initialization of
	SAXModules rather than static initialization.

	* magick/command.c: Commands now support reading an image from
	stdin in conjunction with a subrange specification (e.g. "-[1]").
	Problem was reported by Mario Becroft.

	* magick/common.h: New header file to incorporate the common bits
	shared by studio.h and api.h.

	* ltdl/ltdl.c: Update libltdl to 2.2.6b in order to fix security
	issue.  Resolves CVE-2009-3736 as it pertains to GraphicsMagick.

2009-11-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/constitute.c (ConstituteImage, DispatchImage): 'A' and
	'T' should indicate transparency and 'O' should indicate opacity.
	Behavior was inconsistent.  In some cases 'O' meant transparency
	while in other cases it meant opacity. Also, in a few cases, matte
	was not getting enabled in the image as it should.  Problems were
	reported by Scott Kuhl.

2009-11-10  Glenn Randers-Pehrson <glennrp@simple....>

	* coders/png.c: Also suppress new pedantic warnings from most
	older libpng-1.4.0 betas.

	* coders/png.c: Added a warning when attempting to use libpng-1.4beta
	older than 1.4.0beta67.

2009-11-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (MogrifyImage): Only invoke ProfileImage() if
	an ICC CMS transform is to be performed.  Otherwise invoke
	SetImageProfile() to add the new profile.

	* magick/profile.c (ProfileImage): Improve logging messages.

	* coders/tiff.c (ReadTIFFImage): Allow CIELAB TIFF to be read.

	* coders/jpeg.c (ReadJPEGImage): Detect and apply colorspaces
	appropriately for ITU FAX JPEG.
