@@ -21,6 +21,15 @@
 </tr>
 </table>
 <p>
+2009-11-18  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/image.c (AllocateImage): The documented shorthand for
+        specifying image size via filename[WIDTHxHEIGHT] was not working
+        for raw formats which use the image tile_info data.
+
+</UL>
+<p>
 2009-11-17  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
